--- a/red.html
+++ b/red.html
@@ -32,8 +32,7 @@
   <div class="main">
 	  
 	  <img src="images/red.jpg" alt="red"  
-		 width="695"
-		 height="379"/>
+		 width="388" height="469"/>
 	  
 	<h2> The Meaning of Red </h2> 
        <p> One of the intriguing colors that reveals a variety of symbolisms, meanings, and associations is red. It frequently goes hand in hand with our intense feelings of love, desire, and anger. Due to its warm, vibrant tones, red is a color that is regarded as a head-turner, from red hair to the red carpet at events. Red has been shown to raise viewers' heart rates and blood pressure. Passion and vigor are the two qualities this primary hue represents. Red is occasionally used by businesses to convey a sense of urgency. </p>
