--- a/red.html
+++ b/red.html
@@ -31,7 +31,7 @@
 
   <div class="main">
 	  
-	  <img src="images/red.jpg" alt="red"  
+	  <img src="images/red1.jpg" alt="red"  
 		 width="388" height="469"/>
 	  
 	<h2> The Meaning of Red </h2> 
